tests/fixtures/resolve/duplicate_symbols.veyl
struct User {
    name: Str,
}
fn User() {}
